@@ -1,12 +1,16 @@
 package agh.edu.pl.healthmonitoringsystem.domain.service;
 
+import agh.edu.pl.healthmonitoringsystem.domain.component.FormAiAnalysisConverter;
+import agh.edu.pl.healthmonitoringsystem.domain.component.ResultAiAnalysisConverter;
 import agh.edu.pl.healthmonitoringsystem.domain.component.ModelMapper;
 import agh.edu.pl.healthmonitoringsystem.domain.exception.EntityNotFoundException;
 import agh.edu.pl.healthmonitoringsystem.domain.validator.RequestValidator;
-import agh.edu.pl.healthmonitoringsystem.persistence.PredictionSummaryEntryRepository;
+import agh.edu.pl.healthmonitoringsystem.model.ResultAiAnalysis;
+import agh.edu.pl.healthmonitoringsystem.model.ResultAiData;
 import agh.edu.pl.healthmonitoringsystem.persistence.PredictionSummaryRepository;
-import agh.edu.pl.healthmonitoringsystem.persistence.model.entity.AiPredictionSummaryEntity;
-import agh.edu.pl.healthmonitoringsystem.persistence.model.entity.AiPredictionSummaryEntryEntity;
+import agh.edu.pl.healthmonitoringsystem.persistence.ResultRepository;
+import agh.edu.pl.healthmonitoringsystem.persistence.model.entity.PredictionSummaryEntity;
+import agh.edu.pl.healthmonitoringsystem.persistence.model.entity.ResultEntity;
 import agh.edu.pl.healthmonitoringsystem.request.PredictionSummaryRequest;
 import agh.edu.pl.healthmonitoringsystem.request.PredictionSummaryUpdateRequest;
 import agh.edu.pl.healthmonitoringsystem.response.PredictionSummary;
@@ -17,8 +21,10 @@ import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static agh.edu.pl.healthmonitoringsystem.domain.component.UpdateUtil.updateField;
 import static agh.edu.pl.healthmonitoringsystem.enums.PredictionRequestStatus.IN_PROGRESS;
@@ -27,75 +33,87 @@ import static agh.edu.pl.healthmonitoringsystem.enums.PredictionRequestStatus.IN
 public class PredictionRequestService {
 
     private final PredictionSummaryRepository predictionRepository;
-    private final PredictionSummaryEntryRepository predictionEntryRepository;
     private final ModelMapper modelMapper;
+    private final ResultAiAnalysisConverter resultAiAnalysisConverter;
+    private final FormAiAnalysisConverter formAiAnalysisConverter;
     private final RequestValidator validator;
 
+    private final ResultRepository resultRepository;
+
     @Autowired
-    public PredictionRequestService(PredictionSummaryRepository predictionRepository, PredictionSummaryEntryRepository predictionEntryRepository, ModelMapper modelMapper, RequestValidator validator) {
+    public PredictionRequestService(PredictionSummaryRepository predictionRepository, ModelMapper modelMapper, ResultAiAnalysisConverter resultAiAnalysisConverter, FormAiAnalysisConverter formAiAnalysisConverter, RequestValidator validator, ResultRepository resultRepository) {
         this.predictionRepository = predictionRepository;
-        this.predictionEntryRepository = predictionEntryRepository;
         this.modelMapper = modelMapper;
+        this.resultAiAnalysisConverter = resultAiAnalysisConverter;
+        this.formAiAnalysisConverter = formAiAnalysisConverter;
         this.validator = validator;
+        this.resultRepository = resultRepository;
     }
 
     public PredictionSummary getPredictionSummaryRequestById(Long requestId) {
-        AiPredictionSummaryEntity entity = predictionRepository.findById(requestId)
+        PredictionSummaryEntity entity = predictionRepository.findById(requestId)
                 .orElseThrow(() -> new EntityNotFoundException("AI prediction Summary reqest with id " + requestId + " not found"));
 
-        List<AiPredictionSummaryEntryEntity> entries = predictionEntryRepository.findByRequestId(requestId);
-
-        return modelMapper.mapPredictionSummaryEntityToPredictionSummary(entity, entries);
+        return modelMapper.mapPredictionSummaryEntityToPredictionSummary(entity);
     }
 
     public PredictionSummary createPredictionRequest(PredictionSummaryRequest predictionSummaryRequest) {
         validator.validate(predictionSummaryRequest);
 
         LocalDateTime now = LocalDateTime.now();
-        AiPredictionSummaryEntity entity = AiPredictionSummaryEntity.builder()
+        PredictionSummaryEntity entity = PredictionSummaryEntity.builder()
                 .patientId(predictionSummaryRequest.patientId())
                 .doctorId(predictionSummaryRequest.doctorId())
-                .status(IN_PROGRESS.toString())
+                .status(IN_PROGRESS)
                 .createdDate(now)
                 .modifiedDate(now)
                 .build();
-        AiPredictionSummaryEntity savedEntity = predictionRepository.save(entity);
 
-        List<AiPredictionSummaryEntryEntity> entries = predictionSummaryRequest.resultIds().stream()
-                .map(resultId -> AiPredictionSummaryEntryEntity.builder()
-                        .requestId(savedEntity.getId())
-                        .resultId(resultId)
-                        .build())
-                .toList();
+        List<ResultAiData> results = new LinkedList<>();
+        for(Long resultId: predictionSummaryRequest.resultIds()) {
+            ResultEntity result = resultRepository.getReferenceById(resultId);
 
-        predictionEntryRepository.saveAll(entries);
+            results.add(new ResultAiData(resultId, result.getTestType(), result.getCreatedDate()));
+        }
 
-        return modelMapper.mapPredictionSummaryEntityToPredictionSummary(entity, entries);
+        ResultAiAnalysis analysis = new ResultAiAnalysis(results, null, null);
+
+        entity.setResultAiAnalysis(resultAiAnalysisConverter.convertToDatabaseColumn(analysis));
+
+        predictionRepository.save(entity);
+
+        return modelMapper.mapPredictionSummaryEntityToPredictionSummary(entity);
     }
 
     public void updatePredictionRequest(PredictionSummaryUpdateRequest updateRequest) {
-        AiPredictionSummaryEntity predictionSummaryEntity = predictionRepository.findById(updateRequest.getRequestId())
+        PredictionSummaryEntity predictionSummaryEntity = predictionRepository.findById(updateRequest.getRequestId())
                 .orElseThrow(() -> new EntityNotFoundException("Prediction summary request with id " + updateRequest.getRequestId() + " does not exist"));
 
-        updateField(Optional.ofNullable(updateRequest.getStatus().toString()), predictionSummaryEntity::setStatus);
-        updateField(Optional.ofNullable(updateRequest.getPrediction()), predictionSummaryEntity::setPrediction);
-        updateField(Optional.ofNullable(updateRequest.getConfidence()), predictionSummaryEntity::setConfidence);
+        ResultAiAnalysis analysis = resultAiAnalysisConverter.convertToEntityAttribute(predictionSummaryEntity.getResultAiAnalysis());
+
+        ResultAiAnalysis updatedAnalysis = new ResultAiAnalysis(analysis.results(), updateRequest.getPrediction(), updateRequest.getConfidence());
+
+        updateField(Optional.ofNullable(updateRequest.getStatus()), predictionSummaryEntity::setStatus);
+        predictionSummaryEntity.setResultAiAnalysis(resultAiAnalysisConverter.convertToDatabaseColumn(updatedAnalysis));
+        predictionSummaryEntity.setFormAiAnalysis(formAiAnalysisConverter.convertToDatabaseColumn(updateRequest.getFormAiAnalysis()));
         predictionSummaryEntity.setModifiedDate(LocalDateTime.now());
 
         predictionRepository.save(predictionSummaryEntity);
     }
 
-    public List<PredictionSummary> getPatientPredictions(Long patientId, Integer page, Integer size) {
-        validator.validatePatient(patientId);
+    public List<PredictionSummary> getPatientPredictions(Long doctorId, Long patientId, Integer page, Integer size) {
+        validator.validateDoctor(doctorId);
 
         Pageable pageable = PageRequest.of(page, size, Sort.by("modifiedDate").descending());
-        List<AiPredictionSummaryEntity> predictionEntities = predictionRepository.findByPatientId(patientId, pageable);
 
-        return predictionEntities.stream()
-                .map(predictionEntity -> {
-                    List<AiPredictionSummaryEntryEntity> entries = predictionEntryRepository.findByRequestId(predictionEntity.getId());
-                    return modelMapper.mapPredictionSummaryEntityToPredictionSummary(predictionEntity, entries);
-                })
-                .toList();
+        if(patientId == null) {
+            return predictionRepository.findByDoctorId(doctorId, pageable).stream()
+                    .map(modelMapper::mapPredictionSummaryEntityToPredictionSummary)
+                    .collect(Collectors.toList());
+        }
+
+        return predictionRepository.findByDoctorIdAndPatientId(doctorId, patientId, pageable).stream()
+                .map(modelMapper::mapPredictionSummaryEntityToPredictionSummary)
+                .collect(Collectors.toList());
     }
 }
